          ----------------------------------------------

This file should be used to summarize modifications introduced in the 
code and to keep track of all tags.

     ---------------------------------------------------------------
     * Please list in reverse chronological order (last date on top)
     ---------------------------------------------------------------

07 Nov 2014 Vladimir Ivanchenko (hadr-deex-V10-00-20)
----------------------------------------------------------
- removed debug cout

07 Nov 2014 Vladimir Ivanchenko (hadr-deex-V10-00-19)
----------------------------------------------------------
- removed obsolete G4FermiConfigurationList
- G4ContinuumGammaTransition, G4E1Probability - fixed probability 
    computation (J.M.Quesada)

03 Nov 2014 Vladimir Ivanchenko (hadr-deex-V10-00-18)
----------------------------------------------------------
- Fixed build problem 

03 Nov 2014 Vladimir Ivanchenko (hadr-deex-V10-00-17)
----------------------------------------------------------
- Cleanup and redesign of photon evaporation

31 Oct 2014 Vladimir Ivanchenko (hadr-deex-V10-00-16)
----------------------------------------------------------
- Improved design of FermiBreakUp and fix decays of "unstable" Fermi
    fragments

29 Oct 2014 Vladimir Ivanchenko (hadr-deex-V10-00-15)
----------------------------------------------------------
- G4FermiBreakUp, G4FermiFragmentsPool, G4VEvaporation, 
  G4ExcitationHandler, G4Evaporation, G4EvaporationChannel, G4GEMChannel, 
  G4UnstableFragmentBreakUp, G4VEvaporationChannel
    further reduced memory churn

27 Oct 2014 Vladimir Ivanchenko (hadr-deex-V10-00-14)
----------------------------------------------------------
- G4FermiFragmentsPool - added method IfApplicable() for fast check
    if FermiBreakUp is applicable to a given excited fragment
- G4EvaporationChannel, G4Evaporation, G4GEMChannel, G4GEMProbability,
  G4VEvaporationChannel,  G4ExcitationHandler - optimized code 