@@ -14,6 +14,13 @@ code and to keep track of all tags.
      * Please list in reverse chronological order (last date on top)
      ---------------------------------------------------------------
 
+12 Nov 2014 Vladimir Ivanchenko (hadr-deex-V10-00-21)
+----------------------------------------------------------
+- G4ContinuumGammaTransition - added factor 3 to probability of
+    gamma de-excitation according to theoretical prescriptions
+- G4NuclearLevelStore - fixed bug #1684 - wrong deletion of user data
+    at exit
+
 07 Nov 2014 Vladimir Ivanchenko (hadr-deex-V10-00-20)
 ----------------------------------------------------------
 - removed debug cout
